Version 0.2
===========

07.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Renamed field twitter_account_created to twitter_account_created_at in users table

05.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Added lists as seed data (run rake db:seed after rake db:migrate)
  * Added location, url, description, photo, name, twitter_account_created, is_active fields to users table
  * User gets followed automatically by 140.mk twitter user after successful registration
  * User can deactivate his account, and activate back again the same account (after he logins again)
  * Removed previous implementation of lists on 140.mk twitter account
  * Changed previous subscriptions interface with one form and 5 select boxes to subscribe to 5 categories at once.

Version 0.1
===========

19.12.2009
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Project setup
  * Added OAuth twitter authorization (login and logout functionallity)
  * Added authentication helpers
  * Added my / friend's tweets timeline
  * Added rake task (rake twitter:refresh_lists) for refreshing lists in database with those on the twitter account
  * Added subscriptions resource for user subscriptions to a list
  * Added twitter_id (id of the user on twitter) column to users table
  * Added callbacks in subscription model for adding/removing users in twitter lists
  * Added TwitterHttpAuth class for http authorization of 140_mk user which is responsible for adding/removing users to it's lists
  * Added listing of last tweets from most subscribed lists on front page
  * Added last members from a list on front page
  * Added localization of front page and localization for Rails internals
  * Refactoring of requests to Twitter API via TwitterHttpAuth

  Peco Danajlovski <vortexmk@gmail.com>
  * Added this CHANGELOG file
  * Introducing Compass with Compass-960 plugin for 960gs CSS library
  * Default layout with HAML / SASS (using Compass)