@@ -1,0 +1,3 @@
+class Tweet < ActiveRecord::Base
+  belongs_to :user
+end
