@@ -41,17 +41,48 @@ class TwitterHttpAuth
     lists_members.reject{|k, v| v.empty?}
   end
 
-  def update_lists_in_database_from_twitter
-    base.lists(username).lists.each{ |list| List.find_or_create_by_name(list.name)}
+  def save_tweets(tweets)
+    tweets.each do |tweet|
+      Tweet.create(
+        :user => User.find_by_twitter_id(tweet.user.id),
+        :tweet_id => tweet.id,
+        :text => tweet.text,
+        :created_at => tweet.created_at
+      )
+    end
   end
 
-  def update_subscriptions_in_database_from_twitter
-    List.all.each do |list|
-      base.list_members(username, list.name).users.compact!.each do |u|
-        user = User.find_or_create_by_screen_name(u.screen_name)
-        Subscription.find_or_create_by_user_id_and_list_id(user.id, list.id)
-      end
+  def get_tweets
+    last_tweet = Tweet.find(:first, :order => "tweet_id DESC")
+
+    if last_tweet # when there are tweets in the database collect only new ones
+      page = 1
+      begin
+        tweets = base.friends_timeline({:count => 200, :page => page, :since_id => last_tweet.tweet_id})
+        save_tweets(tweets)
+        page += 1
+      end while tweets.length > 0
+    else # when there are no tweets in database, collect initial ones
+      tweets = base.friends_timeline({:count => 200, :page => 1})
+      save_tweets(tweets)
     end
+  end
+
+  def save_users(profiles)
+    profiles.each do |profile|
+      user = User.find_or_initialize_by_screen_name(profile.screen_name)
+      user.set_attributes_from_twitter_account(profile)
+      user.save
+    end
+  end
+
+  def get_users
+    cursor = -1
+    begin
+      results = base.friends({:cursor => cursor})
+      cursor = results.next_cursor
+      save_users(results.users)
+    end while cursor > 0
   end
 
   def method_missing(m, *args, &block)
