@@ -23,30 +23,33 @@ class User < ActiveRecord::Base
     end
   end
 
+  def set_attributes_from_twitter_account(account)
+    self.twitter_id = account.id
+    self.twitter_account_created_at = account.created_at
+    self.name = account.name
+    self.location = account.location
+    self.url = account.url
+    self.photo = account.profile_image_url
+    self.description = account.description
+  end
+
   def self.create_or_update(profile, oauth)
-    user = User.find_by_screen_name(profile.screen_name) || User.new
-    user.screen_name = profile.screen_name
-    user.twitter_id = profile.id
-    user.twitter_account_created_at = profile.created_at
-    user.name = profile.name
-    user.location = profile.location
-    user.url = profile.url
-    user.photo = profile.profile_image_url
-    user.description = profile.description
+    user = User.find_or_initialize_by_screen_name(profile.screen_name)
+    user.set_attributes_from_twitter_account(profile)
     user.atoken = oauth.access_token.token
     user.asecret = oauth.access_token.secret
-    user.is_active? ? user.save : user.activate!
+    user.status == 1 ? user.save : user.activate!
     user
   end
 
   def activate!
-    self.is_active = true
+    self.status = 1 # active
     self.save!
     follow_user
   end
 
   def deactivate!
-    self.is_active = false
+    self.is_active = 0 # not active
     self.save!
     unfollow_user
   end
@@ -56,6 +59,13 @@ class User < ActiveRecord::Base
   def follow_user
     unless TWITTER_HTTP_AUTH.friendship_exists?(TWITTER_HTTP_AUTH.username, screen_name)
       TWITTER_HTTP_AUTH.friendship_create(twitter_id, true)
+    end
+  rescue Twitter::General => e
+    if e.message =~ /\(403\): Forbidden .*/
+      self.status = 2 # protected account
+      self.save
+    else
+      raise e
     end
   end
 
