@@ -4,6 +4,11 @@
 @import compass/utilities.sass
 @import layout.sass
 
+#flash.error
+  color: red
+
+#flash.notice
+  color: green
 
 #categories
   h1
