@@ -27,6 +27,8 @@ mk:
     tweet: 'твит'
     activate: 'Активирај'
     deactivate: 'Деактивирај'
+    errors:
+      private_account: "Вашите твитови се приватни. Треба да го следите {{user}} или вашата сметка да биде јавна за да имаме пристап до вашите твитови. Штом тоа го средите најавете се повторно."
 
   title:
     last_tweets: "Последни твитови"
