@@ -1,16 +1,11 @@
 namespace :twitter do
-
-  desc "Updates lists in database from Twitter account"
-  task :update_lists => :environment do
-    TWITTER_HTTP_AUTH.update_lists_in_database_from_twitter
+  desc "Collects newest tweets from home account (140mk) timeline and saves then into database"
+  task :get_tweets => :environment do
+    TWITTER_HTTP_AUTH.get_tweets
   end
 
-  desc "Updates subscriptions in database from Twitter account"
-  task :update_subscriptions => :environment do
-    TWITTER_HTTP_AUTH.update_subscriptions_in_database_from_twitter
-  end
-
-  desc "Updates lists and subscriptions in database from Twitter account"
-  task :update => [:update_lists, :update_subscriptions] do
+  desc "Collects users from home account (140mk) and saves them into database"
+  task :get_users => :environment do
+    TWITTER_HTTP_AUTH.get_users
   end
 end
