@@ -1,0 +1,13 @@
+# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+
+one:
+  id: 1
+  user: 
+  text: MyString
+  created_at: 2010-01-07 13:00:17
+
+two:
+  id: 1
+  user: 
+  text: MyString
+  created_at: 2010-01-07 13:00:17
