@@ -1,0 +1,8 @@
+require 'test_helper'
+
+class TweetTest < ActiveSupport::TestCase
+  # Replace this with your real tests.
+  test "the truth" do
+    assert true
+  end
+end
